# nasa_process_lib

./: README.md  container.py  pyproject.toml  setup.py
lib/: client.py
lib/processors/: tif_downloader.py  tif_processor.py  url_grouper.py
