[build-system]
requires = ["setuptools>=40.9.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bluebellutils"
version = "0.1.0"
authors = [{name = "Marcio Bastos", email = "marcio.bastos@bluebellindex.com"}]
description = "A utility library for various client interfaces and utilities"
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.6"
dependencies = [
    "azure-storage-blob",
    "redis",
    "requests",
    "pika",
    "injector"
]

[project.urls]
homepage = "https://gitlab.com/bluebell-index/bluebellutils"

