[build-system]
requires = ["setuptools>=40.9.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nasa_process_lib"
version = "0.1.0"
authors = [{name = "Marcio Bastos", email = "marciomacielbastos@hotmail.com"}]
description = "A utility library for various client interfaces and utilities"
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.10"
dependencies = [
    "earthaccess",
    "osgeo",
    "requests",
    "rasterio",
    "injector"
]

[project.urls]
homepage = "https://github.com/marciomacielbastos/nasa_process_lib"

